:white_check_mark: [Test] 다른 회원 조회 API 테스트 코드 작성